// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar renders at 50% progress in navy color 1`] = `
<Fragment>
  <ScreenReaderOnly>
    My Progress Bar
  </ScreenReaderOnly>
  <div
    className="ProgressBar navy"
  >
    <div
      aria-labelledby="my-progress-bar"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow={50}
      className="Progress"
      role="progressbar"
      style={
        Object {
          "width": "50%",
        }
      }
    />
  </div>
</Fragment>
`;

exports[`ProgressBar renders progressbar at defaults 1`] = `
<Fragment>
  <ScreenReaderOnly>
    My Progress Bar
  </ScreenReaderOnly>
  <div
    className="ProgressBar orange"
  >
    <div
      aria-labelledby="my-progress-bar"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow={0}
      className="Progress"
      role="progressbar"
      style={
        Object {
          "width": "0%",
        }
      }
    />
  </div>
</Fragment>
`;
